# tachyon

tachyon/crypto/hashes/sponge/poseidon/: poseidon.h
tachyon/math/polynomials/univariate/: radix2_evaluation_domain.h  univariate_evaluation_domain_unittest.cc  univariate_evaluations.h  univariate_polynomial.h
tachyon/zk/base/: BUILD.bazel
tachyon/zk/base/entities/: prover.h
tachyon/zk/lookup/: lookup_argument_runner_impl.h
tachyon/zk/plonk/circuit/: column_key_unittest.cc
tachyon/zk/plonk/circuit/examples/: BUILD.bazel  fibonacci_circuit.h  fibonacci_circuit4.h  fibonacci_circuit_unittest.cc  simple_circuit.h  simple_lookup_circuit.h
tachyon/zk/plonk/circuit/floor_planner/: constant.h
tachyon/zk/plonk/circuit/floor_planner/v1/: BUILD.bazel  assignment_pass.h  v1_floor_planner.h
tachyon/zk/plonk/examples/: BUILD.bazel  fibonacci1_circuit.h  fibonacci1_circuit_test.cc  fibonacci1_v1_circuit_test.cc  fibonacci2_circuit.h  fibonacci2_circuit_test.cc  fibonacci2_v1_circuit_test.cc  fibonacci3_circuit.h  fibonacci3_circuit_test.cc  fibonacci3_v1_circuit_test.cc  fibonacci4_circuit.h  is_zero_chip.h  simple_circuit.h  simple_circuit_test_data.h  simple_lookup_circuit.h
tachyon/zk/plonk/halo2/: poseidon_transcript.h  sha256_transcript.h  verifier.h
tachyon/zk/plonk/vanishing/: BUILD.bazel  prover_vanishing_argument.h  vanishing_argument_unittest.cc  vanishing_committed.h  vanishing_constructed.h  vanishing_evaluated.h  vanishing_partially_evaluated.h  vanishing_utils.h  verifier_vanishing_argument.h
tachyon/zk/transcript/: BUILD.bazel  blake2b_transcript.h
vendors/halo2/src/: bn254.rs  transcript.rs
vendors/halo2/src/circuits/: mod.rs  simple_circuit.rs
